--- a/Regression Boston Housing/regression_boston_housing_by_arifromadhan.ipynb
+++ b/Regression Boston Housing/regression_boston_housing_by_arifromadhan.ipynb
@@ -929,7 +929,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sc_x = StandardScaler()\n",
@@ -2281,7 +2283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
