--- a/Volume Forecasting/Volume Forecasting.ipynb
+++ b/Volume Forecasting/Volume Forecasting.ipynb
@@ -56,7 +56,8 @@
     "\n",
     "$\\textbf{Arif Romadhan}$ <br>\n",
     "email : arifromadhan19@gmail.com<br><br>\n",
-    "[Link my kaggle](https://www.kaggle.com/utathya/future-volume-prediction)<br>"
+    "[Link kaggle](https://www.kaggle.com/utathya/future-volume-prediction)<br>\n",
+    "[Link kernel kaggle](https://www.kaggle.com/arifromadhan19/volume-forecasting?scriptVersionId=13040106)<br>"
    ]
   },
   {
